<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/xp_tuto"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/filledTextField">

            <LinearLayout
                android:id="@+id/details"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    tools:text="Created on 1 January 2010" />

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/avatar"
                    android:scaleType="centerInside" />

                <Button
                    android:id="@+id/textButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="viewRepositories"
                    android:text="@string/view_repos" />

            </LinearLayout>

            <TextView
                android:id="@+id/notFound"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/no_user_found"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:visibility="invisible" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                tools:visibility="visible" />

        </FrameLayout>

    </RelativeLayout>

</ScrollView>